# Schneider-backend

./: SchneiderDatabase.db  main.py  pyproject.toml
src/backend/: main.py  utils.py
src/backend/data/: DataCleaning.ipynb  Inventory waterfall.xlsm  SchneiderDatabase.db  data.xlsx  data2.xlsx
